them (Bug #194). [Phillip Smith]

=item *

The Apache 2 detection during installation now properly finds C<Include>d
configuration files specified with paths relative to the C<HTTPD_ROOT> (Bug
#174). [Michael Herring]

=item *

Using pagination controls when selecting from a list of stories to relate no
longer throws an error (Bug #183). [Greg Heo]

=back

=head1 Version 2.0.0 (2010-04-12)

=head2 Bug Fixes

=over

=item *

Fixed error handling in the access handler so that it works when a URI is a
directory. Thanks to Dave Rolsky for the initial patch. [David]

=item *

Updated session error handling to recognize a different error message in
recent versions of Apache::Session. [Dave Rolsky]

=item *

The buttons once again work in the category browser when the
C<ENABLE_CATEGORY_BROWSER> F<bricolage.conf> directive is true. Thanks to
Krzysztof Rudnik for the report (Bug #155). [David]

=item *

Fixed subtle category autocomplete issue where it can be difficult to choose
the root category. It would appear to work, but the "Unable to add category
that does not exist" message would not clear and the form would think that the
category isn't legal. Could apply to other categories, but was most common for
the root category. Thanks to Michael Herring for the detailed steps to
reproduce (Bug #157). [David]

=item *

Fixed bug where custom fields in the contributor profile did not appear in
some browsers. Thanks to Krzysztof Rudnik for the report (Bug #139). [David]

=item *

Fixed bug where publishing a story with multiple categories (and perhaps
multiple pages) led to the deletion of preivew files. Thanks to Guido
Buelskaemper for the report (Bug #156). [David]

=back

=head1 Version 1.11.4 (2010-03-29)

=head2 New Features

=over

=item *

Added the C<--match-title> option to F<contrib/bric_media_upload>. This will
match the uploading file name against the title of the media object rather than
the file name [Paul Orrock]

=item *
