@@ -402,9 +402,9 @@ div.popup-menu {
     border: 1px solid #888;
     margin: 0;
     padding: 0;
-    padding-bottom: .4em !important;
     z-index: 1000;
     display: block;
+    font-size: 1.1em;
 }
 div.popup-menu.checkin {
 	left: 0px;    
@@ -413,7 +413,6 @@ div.popup-menu ul {
     list-style: none outside;
     width: 100%;
     margin: 0 !important;
-    margin-bottom: 0.2em !important;
     padding: 0 !important;
     display: block;
 }
@@ -441,9 +440,10 @@ div.popup-menu a {
     text-align: left !important;
     color: black;
     text-decoration: none;
+    padding: 3px 0 3px 1px;
 }
 div.popup-menu a:hover {
-    background-color: #336FCB;
+    background-color: #000;
     color: white;
 }
 
